# crab-scheme

./: .gitignore  .mcp.json  BEAM_WORKTREE.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  FOUNDATIONS_B_WORKTREE.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SDK_SPEC_WORKTREE.md  devenv.nix  devenv.yaml  rust-toolchain.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/: pre-m5-plan.md
.github/workflows/: ci.yml  m5-fuzz.yml  (+1 more)
bench/: aot-comparison.sh  aot-vs-runtimes.sh  baseline.sh  conformance-baseline.json  m5-phase1-baseline.json  m6-fib30-baseline.md  typer-phase5-validate.sh  typer-scorecard.sh  wasm-conformance.sh
crabscheme-vscode/: README.md  language-configuration.json  package.json
crates/cs-actor/: Cargo.toml
crates/cs-actor/examples/: perf_spawn_echo.rs
crates/cs-actor/src/: lib.rs  local_pool.rs
crates/cs-actor/tests/: local_activation.rs
crates/cs-aot/: Cargo.toml
crates/cs-aot-rt/: Cargo.toml
crates/cs-aot-rt/src/: lib.rs
crates/cs-aot/src/: lib.rs  project.rs
crates/cs-aot/tests/: bytecode_pipeline.rs  project_pipeline.rs  rustc_compile.rs  source_pipeline.rs
crates/cs-channel/: Cargo.toml
crates/cs-channel/src/: lib.rs
crates/cs-cli/: Cargo.toml  build.rs
crates/cs-cli-sha2/: Cargo.toml
crates/cs-cli-sha2/src/: main.rs
crates/cs-cli/src/: main.rs
crates/cs-cli/tests/: aot_object_l3.rs  cli_smoke.rs  conformance.rs  diff_aot_vs_jit.rs
crates/cs-consensus/: Cargo.toml
crates/cs-consensus/src/: codec.rs  driver.rs  epaxos.rs  group.rs  lease.rs  lib.rs  raft.rs  sim.rs  store.rs
crates/cs-consensus/src/store/: rocks.rs
crates/cs-consensus/tests/: rocks_durability.rs
crates/cs-core/: Cargo.toml
crates/cs-core/src/: eq.rs  lib.rs  nanbox.rs  number.rs  promote.rs  symbol.rs  value.rs
crates/cs-core/tests/: cycle_children.rs  gc_smoke.rs  identifier_value.rs
crates/cs-crdt/: Cargo.toml
crates/cs-crdt/src/: clock.rs  counter.rs  lib.rs  map.rs  register.rs  set.rs  sync.rs
crates/cs-discovery/: Cargo.toml
crates/cs-discovery/src/: lib.rs
crates/cs-distrib/: Cargo.toml
crates/cs-distrib/src/: gossip.rs  handshake.rs  lib.rs  membership.rs  phi.rs  pid.rs  router.rs
crates/cs-ffi-example/: Cargo.toml
crates/cs-ffi-example/src/: lib.rs
crates/cs-ffi-http/: Cargo.toml
crates/cs-ffi-http/src/: lib.rs
crates/cs-ffi-macros/: Cargo.toml
crates/cs-ffi-macros/src/: lib.rs
crates/cs-ffi-sha2/: Cargo.toml
crates/cs-ffi-sha2/src/: lib.rs
crates/cs-gc/: Cargo.toml
crates/cs-gc/src/: alloc_telemetry.rs  cycle.rs  cycle_collector.rs  cycle_registry.rs  lib.rs  rc_only.rs  region.rs  tracing.rs
crates/cs-gc/src/alloc_telemetry/: histogram.rs
crates/cs-gc/tests/: cycle.rs  instrumentation_overhead.rs  region.rs
crates/cs-hotreload/: Cargo.toml
crates/cs-hotreload/src/: lib.rs
crates/cs-jit-cranelift/: Cargo.toml
crates/cs-jit-cranelift/src/: ic.rs  lib.rs  lowering.rs
crates/cs-jit-cranelift/tests/: jit_from_bytecode.rs  jit_issue47_map_coverage.rs  jit_region.rs  jit_unboxing.rs
crates/cs-lsp/: Cargo.toml
crates/cs-lsp/src/: builtins.rs  completion.rs  diagnostics.rs  format.rs  harness.rs  hover.rs  lib.rs  mcp.rs  references.rs  semantic_tokens.rs  server.rs  symbols.rs  text.rs  workspace.rs
crates/cs-lsp/tests/: cli_e2e.rs  diagnostics_e2e.rs  features_e2e.rs  mcp_e2e.rs  phase5_e2e.rs  server_init.rs
crates/cs-net/: Cargo.toml
crates/cs-net/examples/: actor_bench.rs
crates/cs-net/src/: framing.rs  lib.rs  quic_dev.rs  tls.rs
crates/cs-opt/: Cargo.toml
crates/cs-opt-example/: Cargo.toml
crates/cs-opt-example/src/: lib.rs
crates/cs-opt-example/tests/: integration.rs
crates/cs-opt/src/: lib.rs
crates/cs-opt/src/passes/: constant_fold.rs  dead_block_elim.rs  escape_to_region.rs  inst_stats.rs  mod.rs  scalar_replace_cons.rs
crates/cs-opt/tests/: builtins.rs  framework.rs
crates/cs-pkg/: Cargo.toml
crates/cs-pkg/src/: lib.rs
crates/cs-runtime/: Cargo.toml
crates/cs-runtime/examples/: embedded_runtime.rs
crates/cs-runtime/src/: active.rs  alloc_dispatch.rs  countable_memory_cycle.rs  env.rs  eval.rs  ffi.rs  jit.rs  lang_reader.rs  lib.rs  proc.rs  regions.rs
crates/cs-runtime/src/builtins/: beam.rs  channel.rs  distrib.rs  etcdpb.rs  grpc.rs  mod.rs  sandbox.rs  web.rs
crates/cs-runtime/src/scheme/: actor.scm  dict.scm  expect.scm  functional.scm  iter.scm  math.scm  mock.scm  pprint.scm  prop.scm  spec.scm  sync.scm  test.scm  walk.scm
crates/cs-runtime/tests/: actor_call_prelude.rs  actor_jit_starvation.rs  aot_region_emit.rs  beam_builtins.rs  beam_counter_migration.rs  beam_error_supervision.rs  beam_prelude_macros.rs  beam_verification.rs  bindings_cycle_visit_region.rs  channel_builtins.rs  closure_cycle.rs  cooperative_receive.rs  cooperative_sleep.rs  cycle_break.rs  cycle_collect_timing.rs  cycle_detection.rs  escape_to_region_e2e.rs  ffi_error_conformance.rs  ffi_loader.rs  ffi_macro.rs  ffi_pin.rs  ffi_smoke.rs  gc_fuzz.rs  gc_memory.rs  gc_smoke.rs  gc_stress.rs  gc_timing.rs  green_blocking_ops.rs  green_parity.rs  green_tcp.rs  green_watchdog.rs  issue29_module_exports_data_only.rs  issue9_crab_target.rs  jit_conformance.rs  jit_cross_function_call_issue19.rs  jit_differential.rs  jit_preemption.rs  jit_proper_tail_calls.rs  jit_runtime.rs  jit_scalar_replace_cons.rs  (+77 more)
crates/cs-runtime/tests/common/: mod.rs
crates/cs-sandbox-wasm/: Cargo.toml
crates/cs-sandbox-wasm/src/: lib.rs  runtime.rs
crates/cs-sandbox-wasm/tests/: iter15_protocol.rs  iter1_smoke.rs  iter5_l1_inside_l2.rs  iter6_bench.rs  iter_review_e_l2_guarantees.rs
crates/cs-stdlib-archive/: Cargo.toml  README.md
crates/cs-stdlib-archive/src/: lib.rs
crates/cs-stdlib-base/: Cargo.toml  README.md
crates/cs-stdlib-base/src/: lib.rs
crates/cs-stdlib-binary/: Cargo.toml  README.md
crates/cs-stdlib-binary/src/: lib.rs
crates/cs-stdlib-cli/: Cargo.toml  README.md
crates/cs-stdlib-cli/src/: lib.rs
docs/: RELEASING.md  ffi-limitations.md
examples/: factorial.scm  fibonacci.scm  metacircular.scm
(+654 files in other folders)
