[workspace]
resolver = "2"
members = [
    "crates/cs-diag",
    "crates/cs-core",
    "crates/cs-lex",
    "crates/cs-parse",
    "crates/cs-ir",
    "crates/cs-expand",
    "crates/cs-runtime",
    "crates/cs-vm",
    "crates/cs-gc",
    "crates/cs-rir",
    "crates/cs-jit",
    "crates/cs-jit-cranelift",
    "crates/cs-ffi",
    "crates/cs-ffi-macros",
    "crates/cs-ffi-example",
    "crates/cs-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ztaylor/crabscheme"

[workspace.dependencies]
# Internal crates
cs-diag = { path = "crates/cs-diag" }
cs-core = { path = "crates/cs-core" }
cs-lex = { path = "crates/cs-lex" }
cs-parse = { path = "crates/cs-parse" }
cs-ir = { path = "crates/cs-ir" }
cs-expand = { path = "crates/cs-expand" }
cs-runtime = { path = "crates/cs-runtime" }
cs-vm = { path = "crates/cs-vm" }
cs-gc = { path = "crates/cs-gc" }
cs-rir = { path = "crates/cs-rir" }
cs-jit = { path = "crates/cs-jit" }
cs-jit-cranelift = { path = "crates/cs-jit-cranelift" }
cs-ffi = { path = "crates/cs-ffi" }
cs-ffi-example = { path = "crates/cs-ffi-example" }
cs-ffi-macros = { path = "crates/cs-ffi-macros" }

# External crates
logos = "0.14"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
unicode-normalization = "0.1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
cranelift-codegen = "0.131"
cranelift-frontend = "0.131"
cranelift-jit = "0.131"
cranelift-module = "0.131"
cranelift-native = "0.131"
libloading = "0.8"
proptest = "1"
# Fast non-cryptographic hasher for Symbol(u32)-keyed maps (the
# interpreter's lexical environments). FxHash — what rustc itself
# uses — is ~2-5x faster than std's SipHash on small integer keys;
# DoS resistance is irrelevant since symbols come from a trusted
# intern table, never untrusted input keyed directly.
rustc-hash = "2.1"
# Inline-storage Vec for small lexical frames (function params,
# let bindings). The `union` feature drops the tag word so a
# SmallVec is the same size as a Vec; ≤4 bindings stay inline,
# eliminating the per-call frame heap allocation.
smallvec = { version = "1", features = ["union"] }

[profile.release]
lto = "thin"
codegen-units = 1
