[workspace]
resolver = "2"
members = [
    "crates/cs-diag",
    "crates/cs-core",
    "crates/cs-lex",
    "crates/cs-parse",
    "crates/cs-ir",
    "crates/cs-expand",
    "crates/cs-runtime",
    "crates/cs-vm",
    "crates/cs-gc",
    "crates/cs-rir",
    "crates/cs-typer",
    "crates/cs-jit",
    "crates/cs-jit-cranelift",
    "crates/cs-ffi",
    "crates/cs-ffi-macros",
    "crates/cs-ffi-example",
    "crates/cs-ffi-sha2",
    "crates/cs-ffi-http",
    "crates/cs-aot",
    "crates/cs-cli",
    "crates/cs-cli-sha2",
    # BEAM-style runtime (see docs/research/beam_runtime_spec.md).
    # cs-supervisor was removed: per the Rust/Scheme split, supervision
    # trees live in lib/beam/prelude.scm on top of the four cs-actor
    # primops — pure dispatch logic, no system calls.
    "crates/cs-actor",
    "crates/cs-table",
    "crates/cs-hotreload",
    # R6RS++ (see docs/research/r6rs_extensions_spec.md).
    "crates/cs-pkg",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ztaylor/crabscheme"

[workspace.dependencies]
# Internal crates
cs-diag = { path = "crates/cs-diag" }
cs-core = { path = "crates/cs-core" }
cs-lex = { path = "crates/cs-lex" }
cs-parse = { path = "crates/cs-parse" }
cs-ir = { path = "crates/cs-ir" }
cs-expand = { path = "crates/cs-expand" }
cs-runtime = { path = "crates/cs-runtime", default-features = false }
cs-vm = { path = "crates/cs-vm" }
cs-gc = { path = "crates/cs-gc" }
cs-rir = { path = "crates/cs-rir" }
cs-typer = { path = "crates/cs-typer" }
cs-jit = { path = "crates/cs-jit" }
cs-jit-cranelift = { path = "crates/cs-jit-cranelift" }
cs-aot = { path = "crates/cs-aot" }
cs-ffi = { path = "crates/cs-ffi" }
cs-ffi-example = { path = "crates/cs-ffi-example" }
cs-ffi-macros = { path = "crates/cs-ffi-macros" }
# BEAM-style runtime crates. Optional deps of cs-runtime behind the
# `actor` feature so non-actor builds (WASM, AOT) skip the tokio +
# dashmap pull.
cs-actor = { path = "crates/cs-actor" }
cs-table = { path = "crates/cs-table" }
cs-hotreload = { path = "crates/cs-hotreload" }
# R6RS++ package manager. Spec §10.
cs-pkg = { path = "crates/cs-pkg" }

# External crates
logos = "0.14"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
unicode-normalization = "0.1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
cranelift-codegen = "0.131"
cranelift-frontend = "0.131"
cranelift-jit = "0.131"
cranelift-module = "0.131"
cranelift-native = "0.131"
libloading = "0.8"
proptest = "1"
# Fast non-cryptographic hasher for Symbol(u32)-keyed maps (the
# interpreter's lexical environments). FxHash — what rustc itself
# uses — is ~2-5x faster than std's SipHash on small integer keys;
# DoS resistance is irrelevant since symbols come from a trusted
# intern table, never untrusted input keyed directly.
rustc-hash = "2.1"
# Inline-storage Vec for small lexical frames (function params,
# let bindings). The `union` feature drops the tag word so a
# SmallVec is the same size as a Vec; ≤4 bindings stay inline,
# eliminating the per-call frame heap allocation.
smallvec = { version = "1", features = ["union"] }
# B2 dep: tokio multi-thread runtime for the actor system. Pinned
# at LTS minor for now; revisit if cs-actor needs newer features.
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "macros", "time"] }
# B4 dep: concurrent hashmap for cs-table set tables. Lock-free
# reads, fine-grained locks on writes. We may swap for a custom
# lock-free B-tree later if the contention test demands it.
dashmap = "6"

[profile.release]
lto = "thin"
codegen-units = 1
