[package]
name = "cs-actor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CrabScheme BEAM-style actor system: per-actor Runtime + tokio mpsc mailbox + reduction-based preemption. See docs/research/beam_runtime_spec.md."

[dependencies]
cs-core = { workspace = true }
cs-runtime = { workspace = true }
cs-gc = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "time"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
