[package]
name = "cs-actor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CrabScheme BEAM-style actor system: per-actor Runtime + tokio mpsc mailbox + reduction-based preemption. See docs/research/beam_runtime_spec.md."

[dependencies]
# cs-core / cs-runtime / cs-gc are deliberately NOT depended on in
# B2 — the actor system is type-erased over a Send+Sync payload so
# the (still !Send) cs_core::Value type doesn't constrain the
# design. Real Value transport lands when Scheme primops
# integrate (post-B3) via copy-on-send wrappers.
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "time"] }
# `futures` provides FutureExt::catch_unwind for the async-task
# panic capture in spawn_async (parallel-runtime C1.1). Smaller
# pull than tokio-util; the cost is one extra dep.
futures = "0.3"
thiserror = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# Needed by examples/perf_spawn_echo.rs (starvation bench bridges
# the cs-vm reduction counter through cs-actor's yield hook).
cs-vm = { path = "../cs-vm" }
