[package]
name = "cs-channel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "First-class MPMC channels for CrabScheme: tokio mpsc-backed FIFOs with close semantics, blocking + try variants. Cross actor boundaries as SendableValue::Channel(ChannelId)."

[dependencies]
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }
dashmap = { workspace = true }
thiserror = { workspace = true }
