[package]
name = "cs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "crabscheme"
path = "src/main.rs"

[features]
# `default` is the "kitchen sink" native build — everything an
# end-user downloading a prebuilt binary or building locally
# without flags should get. Includes all four execution tiers
# (walker / vm / jit / aot), full stdlib (`crab …` modules),
# dynamic FFI loading, the BEAM-style actor primops, and the
# L2 WASM sandbox. Heavy on first build (~30s for wasmtime),
# but produces the binary that documentation assumes.
#
# Three opt-outs:
# - WASM target: use `--no-default-features` (tokio + wasmtime
#   don't compile to wasm32-wasip1; tracing-revival might).
# - Minimal embedder: `--no-default-features --features
#   stdlib-path,stdlib-fs` etc. for a tighter dep closure.
# - Bleeding-edge memory layers: layer-4 tracing GC is OFF by
#   default; enable via `--features all-memory-layers` (or
#   `tracing-cycle-collector` for just that one).
default = ["jit", "ffi-dynamic", "aot", "stdlib", "actor", "distrib", "sandbox"]
jit = ["cs-runtime/jit"]
ffi-trait = ["cs-runtime/ffi-trait"]
ffi-dynamic = ["cs-runtime/ffi-dynamic"]
# (crab …) stdlib modules. See .spec-workflow/specs/stdlib-modules.
# `stdlib` is the umbrella — turns on every shipped module. Per-module
# flags compose so subset embeds work (`--no-default-features --features
# stdlib-path,stdlib-fs` ships only those two crates and nothing else —
# critical for WASM, which can't link tokio/rustls/zstd-sys). Each
# per-module flag forwards only to the matching `cs-runtime/stdlib-X`
# flag; `Runtime::register_stdlib` itself is always compiled (the body
# is no-ops when no module is selected).
stdlib = [
    "cs-runtime/stdlib",
    "stdlib-path",
    "stdlib-fs",
    "stdlib-os",
    "stdlib-process",
    "stdlib-string",
    "stdlib-format",
    "stdlib-regex",
    "stdlib-time",
    "stdlib-random",
    "stdlib-uuid",
    "stdlib-json",
    "stdlib-csv",
    "stdlib-toml",
    "stdlib-base",
    "stdlib-url",
    "stdlib-hash",
    "stdlib-compress",
    "stdlib-deflate",
    "stdlib-archive",
    "stdlib-log",
    "stdlib-metrics",
    "stdlib-net",
    "stdlib-http",
    "stdlib-websocket",
    "stdlib-collection",
    "stdlib-math",
    "stdlib-tty",
    "stdlib-signal",
    "stdlib-meta",
]
stdlib-path = ["cs-runtime/stdlib-path"]
stdlib-fs = ["cs-runtime/stdlib-fs"]
stdlib-os = ["cs-runtime/stdlib-os"]
stdlib-process = ["cs-runtime/stdlib-process"]
stdlib-string = ["cs-runtime/stdlib-string"]
stdlib-format = ["cs-runtime/stdlib-format"]
stdlib-regex = ["cs-runtime/stdlib-regex"]
stdlib-time = ["cs-runtime/stdlib-time"]
stdlib-random = ["cs-runtime/stdlib-random"]
stdlib-uuid = ["cs-runtime/stdlib-uuid"]
stdlib-json = ["cs-runtime/stdlib-json"]
stdlib-csv = ["cs-runtime/stdlib-csv"]
stdlib-toml = ["cs-runtime/stdlib-toml"]
stdlib-base = ["cs-runtime/stdlib-base"]
stdlib-url = ["cs-runtime/stdlib-url"]
stdlib-hash = ["cs-runtime/stdlib-hash"]
stdlib-compress = ["cs-runtime/stdlib-compress"]
stdlib-deflate = ["cs-runtime/stdlib-deflate"]
stdlib-archive = ["cs-runtime/stdlib-archive"]
stdlib-log = ["cs-runtime/stdlib-log"]
stdlib-metrics = ["cs-runtime/stdlib-metrics"]
stdlib-net = ["cs-runtime/stdlib-net"]
stdlib-http = ["cs-runtime/stdlib-http"]
stdlib-websocket = ["cs-runtime/stdlib-websocket"]
stdlib-collection = ["cs-runtime/stdlib-collection"]
stdlib-math = ["cs-runtime/stdlib-math"]
stdlib-tty = ["cs-runtime/stdlib-tty"]
stdlib-signal = ["cs-runtime/stdlib-signal"]
stdlib-meta = ["cs-runtime/stdlib-meta"]
# cs-web tower-style framework + Scheme-actor-as-Layer primops.
# Implies `actor` via the cs-runtime forwarding chain.
web = ["actor", "cs-runtime/web"]
web-modules = ["web", "cs-runtime/web-modules"]
# WASM-safe subset — 21 modules that build clean for
# `wasm32-wasip1`. Excludes: os/process (no Unix syscalls),
# net/http/websocket (no real sockets in WASI), signal/tty
# (Unix-only deps), compress (zstd-sys won't cross-compile
# under nix-wrapped clang). gzip+deflate live in stdlib-deflate
# so they ship on WASM. Use as:
#   cargo build --target wasm32-wasip1 -p cs-cli \
#     --no-default-features --features wasm-stdlib
# See docs/milestones/stdlib-modules-exit.md for the rationale.
wasm-stdlib = [
    "stdlib-path",
    "stdlib-fs",
    "stdlib-string",
    "stdlib-format",
    "stdlib-regex",
    "stdlib-time",
    "stdlib-random",
    "stdlib-uuid",
    "stdlib-json",
    "stdlib-csv",
    "stdlib-toml",
    "stdlib-base",
    "stdlib-url",
    "stdlib-hash",
    "stdlib-compress",
    "stdlib-deflate",
    "stdlib-archive",
    "stdlib-log",
    "stdlib-metrics",
    "stdlib-collection",
    "stdlib-math",
    "stdlib-os",
    "stdlib-process",
    "stdlib-signal",
    "stdlib-tty",
    "stdlib-meta",
]
# `wasm-stdlib` plus the networking modules wasm32-wasip2 can host
# (#9 iters 2-4). Use on `wasm32-wasip2` only — wasip1 lacks the
# `wasi:sockets 0.2` + `wasi:http 0.2` worlds:
#   cargo build --target wasm32-wasip2 -p cs-cli \
#     --no-default-features --features wasm-stdlib-full
# Iter-2 added `stdlib-net` (TCP client + DNS via std::net; passive
# sockets raise on wasi). Iter-3 adds `stdlib-http` (client via
# `wasi-http-client`; server raises stubs until iter-5). Iter-4 will
# add `stdlib-websocket`. See docs/adr/0033-wasip2-networking.md.
wasm-stdlib-full = [
    "wasm-stdlib",
    "stdlib-net",
    "stdlib-http",
]
# Backward-compat alias matching the W1 feature name.
ffi = ["cs-runtime/ffi"]
# RC2 iter G — wire the AOT subcommand. Default-on for native; the
# WASM build drops it (can't spawn cargo at WASI runtime).
aot = [
    "dep:cs-aot",
    "dep:cs-vm",
    "dep:cs-rir",
    "dep:cs-parse",
    "dep:cs-expand",
    "dep:cs-typer",
    # AOT level 3 — cranelift-object backend the CLI drives when no Rust
    # toolchain is present (or CRABSCHEME_AOT_FORCE_OBJECT=1).
    "dep:cs-jit-cranelift",
]
# AOT level 1: embed the workspace crate sources into the binary (via
# build.rs) so `crabscheme aot --build` works from a release-installed
# binary with no dev source tree. OFF by default to avoid include_bytes!
# rebuild churn on the dev loop (a from-source build resolves cs-vm via
# its on-disk path); the release workflow turns it on so the shipped
# tarball is self-contained. Only meaningful together with `aot`.
bundled-aot-sources = []
# Layer-4 tracing cycle collector (tracing-revival spec).
# Off by default; embedders and benchmarks that want to
# exercise the layer-4 path enable it explicitly.
tracing-cycle-collector = ["cs-runtime/tracing-cycle-collector"]
# Convenience feature: turns on every memory-management
# layer so benchmarks can exercise the full architecture.
# `regions` is already default-on; this adds layer 4.
all-memory-layers = ["tracing-cycle-collector"]
# BEAM-style actor / table / hot-reload primops
# (`spawn`, `send`, `self`, `make-table`, `load-module!`, …).
# Off by default — the tokio + dashmap dep tree is heavy and
# WASM builds can't link it. Enable for native CLI builds that
# need actor-style concurrency.
actor = ["cs-runtime/actor"]
# Cross-node cluster transport (node-make/link!/send/poll). Implies actor.
distrib = ["cs-runtime/distrib"]
# L2 WASM-instance sandbox (`make-wasm-sandbox`, `sandbox-eval`,
# `sandbox?`, `reset-sandbox!`). Pulls wasmtime 36.x LTS plus
# cs-sandbox-wasm. Off by default — host wasmtime is a large
# dep (~30s clean build); enable for embedders that need L2.
sandbox = ["cs-runtime/sandbox"]

[dependencies]
cs-core = { workspace = true }
cs-diag = { workspace = true }
# Workspace dep declares default-features = false; cs-cli's own
# features explicitly turn on `cs-runtime/jit` / `cs-runtime/ffi`
# when requested. --no-default-features on cs-cli produces a
# minimal runtime (target for W2's wasm32-wasip1 build).
cs-runtime = { workspace = true }
# Optional — only pulled in when the `aot` feature is on. Keeps the
# WASM/no-default-features minimal build slim.
cs-aot = { workspace = true, optional = true }
cs-vm = { workspace = true, optional = true }
cs-rir = { workspace = true, optional = true }
cs-parse = { workspace = true, optional = true }
cs-expand = { workspace = true, optional = true }
# Phase 5 — typer feeds param_type_hints into AOT.
cs-typer = { workspace = true, optional = true }
# AOT level 3 — object backend (cranelift-object) for toolchain-free builds.
cs-jit-cranelift = { workspace = true, optional = true }
clap = { workspace = true }
